[package]
name = "mrps"
version = "0.1.0"
authors = ["Evgenii Pochechuev <pchchv@protom.me>"]
edition = "2021"
description = "Mini reverse proxy server"
readme = "README.md"
repository = "https://github.com/pchchv/mrps"
license = "Apache-2.0"
keywords = ["reverse-proxy", "server"]
categories = ["web-programming::http-server"]

[dependencies]
axum = "0.8.1"
chrono = "0.4.39"
clap = {version = "4.5.28", features = ["derive"]}
glob-match = "0.2.1"
mime_guess = "2.0.5"
minijinja = {version = "2.7.0", features = ["loader"]}
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
serde_urlencoded = "0.7.1"
tokio = {version = "1.43.0", features = ["full"]}
reqwest = {version = "0.12.12", features = ["blocking"]}
toml = "0.8.20"
axum-server = {version = "0.7.1", features = ["tls-openssl"]}
tower-http = {version = "0.6.2", features = ["cors"]}